[package]
name = "wasi-requestor"
version = "0.1.0"
authors = ["Jakub Konka <kubkon@golem.network>"]
edition = "2018"

[dependencies]
anyhow = "1"
actix-web = "2.0.0"
actix-rt = "1.0.0"
futures = "0.3"
pretty_env_logger = "0.4"
sha3 = "0.9.1"
structopt = "0.3"
zip = "0.5"
serde_json = "1"
tempfile = "3.1"
log = "0.4.5"
generic-array = "0.14.2"
